--- a/rottenTomatoes/package.json
+++ b/rottenTomatoes/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "devDependencies": {
     "closure-compiler": "^0.2.6",
-    "grunt": "^0.4.5",
-    "grunt-closure-tools": "^0.9.6",
-    "grunt-karma": "^0.8.3",
-    "karma": "^0.12.16",
+    "grunt": "1.5.2",
+    "grunt-closure-tools": "^1.0.0",
+    "grunt-karma": "^4.0.2",
+    "karma": "^4.0.0",
     "karma-jasmine": "^0.1.5",
     "phantomjs": "^1.9.7-10"
   }
